--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.26.4",
+    "swiper": "^11.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
